Initialize SimpleCard project

--- a/WeatherApp/app/src/main/res/values/themes.xml
+++ b/WeatherApp/app/src/main/res/values/themes.xml
@@ -5,5 +5,7 @@
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowLayoutInDisplayCutoutMode" tools:targetApi="p">shortEdges</item>
         <item name="android:navigationBarColor">@color/very_light_gray</item>
+        <item name="android:statusBarColor">@color/white</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 </resources>
